--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="container hidden" id="main-content">
         <h1>Will You Be My Valentine? ❤️</h1>
         <div class="buttons">
-            <button class="yes-btn" onclick="showMessage()">S 💕</button>
-            <button class="no-btn" onclick="showMessage('no')">No 😢</button>
+            <button class="yes-btn" onclick="showMessage()">Siii mi amoooor 💕</button>
+            <button class="no-btn" onclick="showMessage('no')">No.. no se me antoja 😢</button>
         </div>
         <h2 class="hidden" id="response"></h2>
         <div id="gif-container"></div> <!-- GIF appears here -->
