--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Welcome Screen (shows gif10) -->
+  <!-- Welcome Screen (cat image = gif10.gif) -->
   <div id="welcome-screen" class="welcome-screen">
     <img src="gifs/gif10.gif" alt="Intro GIF" class="welcome-gif" />
     <p>
@@ -18,7 +18,7 @@
     <button class="continue-btn" onclick="startValentine()">Continuar 💖</button>
   </div>
 
-  <!-- Main Content (initially hidden; shows gif6 at the top) -->
+  <!-- Main Content (initially hidden; shows gif6) -->
   <div id="main-content" class="container hidden">
     <img src="gifs/gif6.gif" alt="Main Intro GIF" class="main-gif" />
     <h1 id="main-text">Will You Be My Valentine? ❤️</h1>
@@ -33,3 +33,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+   
