--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Welcome Screen (cat image = gif10.gif) -->
+  <!-- Welcome Screen (shows gif10) -->
   <div id="welcome-screen" class="welcome-screen">
     <img src="gifs/gif10.gif" alt="Intro GIF" class="welcome-gif" />
     <p>
@@ -33,4 +33,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-   
